syntax = "proto3";

package proto;

option go_package = "./api/proto";

service WaService {
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message SendMessageRequest {
    Metadata Metadata = 1;
    oneof message {
        TextMessage textMessage = 2;
        ImageMessage imageMessage = 3;
    }
}

message SendMessageResponse {
    bool status = 1;
}

message Metadata {
    string type = 1;
    string jid = 2;
    bool fromme = 3;
    string id = 4;
    string pushname = 5;
    int64 timestamp = 6;
}

message TextMessage {
    string conversation = 1;
}

// Dummy message for testing
message ImageMessage {
    string url = 1;
}
